--- a/public/404.html
+++ b/public/404.html
@@ -31,3 +31,4 @@
     </div>
   </body>
 </html>
+You can try making it workYou can try making it workYou can try making it workYou can try making it work
