--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NativeMarsRover</title>
-
+  <link id="cssTheme" rel="stylesheet" href="styling/cssBasic.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="shortcut icon" type="image/png" href="styling/outerspacerocket.svg" />
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.15.5/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -16,10 +18,6 @@
   <!-- initialize the SDK after all desired features are loaded -->
   <script defer src="/__/firebase/init.js"></script>
 
-  <link id="cssTheme" rel="stylesheet" href="public/styling/cssBasic.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 
 </head>
 
@@ -28,7 +26,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a id="refreshButton" class="navbar-brand" href="#">Pathfinding Visualizer</a>
+          <a id="refreshButton" class="navbar-brand" href="#">Native Mars Rover</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="dropdown">
@@ -77,11 +75,11 @@
     </nav>
   </div>
   <div id="tutorial">
-    <h3>Welcome to Pathfinding Visualizer!</h3>
+    <h3>Welcome to Native Mars Rover!</h3>
     <h6>This short tutorial will walk you through all of the features of this application.</h6>
     <p>If you want to dive right in, feel free to press the "Skip Tutorial" button below. Otherwise, press "Next"!</p>
     <div id="tutorialCounter">1/9</div>
-    <img id="mainTutorialImage" src="public/styling/c_icon.png">
+    <img id="mainTutorialImage" src="/styling/outerspacerocket.svg">
     <button id="nextButton" class="btn btn-default navbar-btn" type="button">Next</button>
     <button id="previousButton" class="btn btn-default navbar-btn" type="button">Previous</button>
     <button id="skipButton" class="btn btn-default navbar-btn" type="button">Skip Tutorial</button>
@@ -120,12 +118,11 @@
     <table id='board' />
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<script src='public/browser/bundle.js'></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src='browser/bundle.js'></script>
+
+
 
 </html>
