--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     <h6>This short tutorial will walk you through all of the features of this application.</h6>
     <p>If you want to dive right in, feel free to press the "Skip Tutorial" button below. Otherwise, press "Next"!</p>
     <div id="tutorialCounter">1/9</div>
-    <img id="mainTutorialImage" src="/styling/outerspacerocket.svg">
+    <img id="mainTutorialImage" src="/styling/nativemars.png">
     <button id="nextButton" class="btn btn-default navbar-btn" type="button">Next</button>
     <button id="previousButton" class="btn btn-default navbar-btn" type="button">Previous</button>
     <button id="skipButton" class="btn btn-default navbar-btn" type="button">Skip Tutorial</button>
