--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mazes &amp; Patterns
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Terrain
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li id='startButtonCreateMazeTwo'><a href="#">Recursive Division</a></li>
@@ -55,7 +55,7 @@
               <li id='startStairDemonstration'><a href="#">Simple Stair Pattern</a></li>
             </ul>
           </li>
-          <li id='startButtonAddObject'><a href="#">Add Bomb</a></li>
+          <li id='startButtonAddObject'><a href="#">Add Tools</a></li>
           <li id='startButtonStart'><button id="actualStartButton" class="btn btn-default navbar-btn"
               type="button">Visualize!</button></li>
           <li id='startButtonClearBoard'><a href="#">Clear Board</a></li>
