--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>NativeMarsRover</title>
   <link id="cssTheme" rel="stylesheet" href="styling/cssBasic.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="shortcut icon" type="image/png" href="styling/outerspacerocket.svg" />
+  <link rel="shortcut icon" type="image/jpg" href="styling/outerspacerocket.jpg" />
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.15.5/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
