playing around with css

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>NativeMarsRover</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link id="cssTheme" rel="stylesheet" href="styling/cssBasic.css" />
+  <!-- <link rel="stylesheet" href="styling/style.css" /> -->
   <link id="css" rel="stylesheet" href="styling/popoverStyle.css" />
   <link rel="shortcut icon" type="image/jpg" href="styling/outerspacerocket.jpg" />
 
@@ -120,6 +121,7 @@
   </div>
   <div id='mainGrid'>
     <div id='mainText'>
+      <div id="stats"></div>
       <ul>
         <li>
           <div class="start"></div>Start Node
@@ -151,7 +153,8 @@
 
     <div id="algorithmDescriptor">Pick an algorithm and visualize it!</div>
     <table id='board' />
-
+    
+    
     <!-- The Modal -->
     <div id="myModal" class="modal">
 
