--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
           <h3 id="astar_header"><a href="#">A*</a></h3>
           <div id="astar_section" class="finder_section">
             <header class="option_header">
-              <h3>Pick a Heuristic function to play with!!</h3>
+              <h3>Pick a Heuristic function of your choice!!</h3>
             </header>
             <!-- <div id="astar_heuristic" class="sub_options">
               <input type="radio" name="astar_heuristic" value="manhattan" checked />
