--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,20 @@
               <li id='adjustSlow'><a href="#">Slow</a></li>
             </ul>
           </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Terrain Type
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li id='terraintype1'><a href="#">Air (Weight [15])</a></li>
+              <li id='terraintype2'><a href="#">Craters (Weight [15])</a></li>
+              <li id='terraintype3'><a href="#">Volcanoes (Weight [15])</a></li>
+              <li id='terraintype4'><a href="#">Rocky (Weight [15])</a></li>
+              <li id='terraintype5'><a href="#">Water (Weight [15])</a></li>
+              <li id='terraintype6'><a href="#">Sand (Weight [15])</a></li>
+              <li id='terraintype7'><a href="#">Grass (Weight [15])</a></li>
+              <li id='terraintype8'><a href="#">Granite (Weight [15])</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
@@ -184,7 +198,7 @@
               <button id="button2" class="control_button">euclidean </button>
             </div>
             <div id="play_panel" class="panel right_panel">
-              <button id="button3" class="control_button">octile   </button>
+              <button id="button3" class="control_button">octile </button>
             </div>
             <div id="play_panel" class="panel right_panel">
               <button id="button4" class="control_button">chebyshev</button>
@@ -232,7 +246,7 @@
       btn1.onclick = function () {
         modal.style.display = "none";
       }
-    
+
 
       // When the user clicks anywhere outside of the modal, close it
       window.onclick = function (event) {
