--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Terrain Type
+            <a id="terraintype" class="dropdown-toggle" data-toggle="dropdown" href="#">Terrain Type
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li id='terraintype1'><a href="#">Air (Weight [15])</a></li>
