first step to making different weights work on the board

--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,7 @@
               <li id='terraintype6'><a href="#">Sand (Weight [15])</a></li>
               <li id='terraintype7'><a href="#">Grass (Weight [15])</a></li>
               <li id='terraintype8'><a href="#">Granite (Weight [15])</a></li>
+              <li id='terraintype0'><a href="#">Default</a></li>
             </ul>
           </li>
         </ul>
