--- a/public/index.html
+++ b/public/index.html
@@ -362,6 +362,27 @@
   }
 
 </script>
+<!-- <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script> -->
+<!-- <script>
+   var
+            timeStart, timeEnd;
+
+        timeStart = window.performance ? performance.now() : Date.now();
+        
+        
+        timeEnd = window.performance ? performance.now() : Date.now();
+        this.timeSpent = (timeEnd - timeStart).toFixed(4);
+
+        this.loop();
+
+   var texts = [
+            'length: ' + Math.round(opts.pathLength * 100) / 100,
+            'time: ' + opts.timeSpent + 'ms',
+            'operations: ' + opts.operationCount
+        ];
+        $('#stats').show().html(texts.join('<br>'));
+
+</script> -->
 </body>
 
 
