--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
               <li id='startButtonClearPath'><a href="#">Clear Path</a></li>
             </ul>
           </li>
-          
+
           <li class="dropdown">
             <a id="adjustSpeed" class="dropdown-toggle" data-toggle="dropdown" href="#">Speed: Fast
               <span class="caret"></span></a>
@@ -142,7 +142,7 @@
           <div class="wall"></div>Default Wall Node
         </li>
         <li>
-          <div class="wall1"></div>Air 
+          <div class="wall1"></div>Air
         </li>
         <li>
           <div class="wall2"></div>Craters
@@ -241,7 +241,7 @@
             <header class="option_header">
               <h3>Pick a Heuristic function of your choice!!</h3>
             </header>
-           
+
             <div id="play_panel" class="panel right_panel">
               <button id="button5" class="control_button">manhattan </button>
             </div>
@@ -277,69 +277,44 @@
       </div>
     </div>
     <script>
-      var modal = document.getElementById("myModal");
+      document.getElementById('myBtn').onclick = function () {
+        document.getElementById("myModal").style.display = "block";
 
-      // Get the button that opens the modal
-      var btn = document.getElementById("myBtn");
-      // var btn1 = document.getElementById("button1");
-      // Get the <span> element that closes the modal
-      var span = document.getElementsByClassName("close")[0];
+        var span = document.getElementsByClassName("close")[0];
 
-      // When the user clicks the button, open the modal 
-      btn.onclick = function () {
-        modal.style.display = "block";
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+          document.getElementById("myModal").style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+          if (event.target == document.getElementById("myModal")) {
+            document.getElementById("myModal").style.display = "none";
+          }
+        }
+
       }
 
-      // When the user clicks on <span> (x), close the modal
-      span.onclick = function () {
-        modal.style.display = "none";
-      }
-      // btn1.onclick = function () {
-      //   modal.style.display = "none";
-      // }
 
+      document.getElementById('myBtn1').onclick = function () {
+        document.getElementById("myModal1").style.display = "block";
 
-      // When the user clicks anywhere outside of the modal, close it
-      window.onclick = function (event) {
-        if (event.target == modal) {
-          modal.style.display = "none";
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+          document.getElementById("myModal1").style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+          if (event.target == document.getElementById("myModal1")) {
+            document.getElementById("myModal1").style.display = "none";
+          }
         }
       }
-
     </script>
-
-<script>
-  var modal = document.getElementById("myModal1");
-
-  // Get the button that opens the modal
-  var btn = document.getElementById("myBtn1");
-  // var btn1 = document.getElementById("button1");
-  // Get the <span> element that closes the modal
-  var span = document.getElementsByClassName("close")[0];
-
-  // When the user clicks the button, open the modal 
-  btn.onclick = function () {
-    modal.style.display = "block";
-  }
-
-  // When the user clicks on <span> (x), close the modal
-  span.onclick = function () {
-    modal.style.display = "none";
-  }
-  // btn1.onclick = function () {
-  //   modal.style.display = "none";
-  // }
-
-
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function (event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  }
-
-</script>
-
 </body>
 
 
