change name to relevant terms of the theme

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li id='startButtonClearBoard'><a href="#">Reset Board</a></li>
-              <li id='startButtonClearWalls'><a href="#">Clear Walls &amp; Weights</a></li>
+              <li id='startButtonClearWalls'><a href="#">Clear Terrain &amp; Weights</a></li>
               <li id='startButtonClearPath'><a href="#">Clear Path</a></li>
             </ul>
           </li>
