weights for terrain types

--- a/public/index.html
+++ b/public/index.html
@@ -87,15 +87,15 @@
             <a id="terraintype" class="dropdown-toggle" data-toggle="dropdown" href="#">Terrain Type
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li id='terraintype1'><a href="#">Air (Weight [15])</a></li>
-              <li id='terraintype2'><a href="#">Craters (Weight [15])</a></li>
-              <li id='terraintype3'><a href="#">Volcanoes (Weight [15])</a></li>
-              <li id='terraintype4'><a href="#">Rocky (Weight [15])</a></li>
-              <li id='terraintype5'><a href="#">Water (Weight [15])</a></li>
-              <li id='terraintype6'><a href="#">Sand (Weight [15])</a></li>
-              <li id='terraintype7'><a href="#">Grass (Weight [15])</a></li>
-              <li id='terraintype8'><a href="#">Granite (Weight [15])</a></li>
-              <li id='terraintype0'><a href="#">Default</a></li>
+              <li id='terraintype1'><a href="#">Air (Weight [1])</a></li>
+              <li id='terraintype2'><a href="#">Craters (Weight [60])</a></li>
+              <li id='terraintype3'><a href="#">Volcanoes (Weight [80])</a></li>
+              <li id='terraintype4'><a href="#">Rocky (Weight [5])</a></li>
+              <li id='terraintype5'><a href="#">Water (Weight [10])</a></li>
+              <li id='terraintype6'><a href="#">Sand (Weight [30])</a></li>
+              <li id='terraintype7'><a href="#">Grass (Weight [25])</a></li>
+              <li id='terraintype8'><a href="#">Granite (Weight [50])</a></li>
+              <li id='terraintype0'><a href="#">Default (Weight [Infinity])</a></li>
             </ul>
           </li>
         </ul>
